Tweaked settings in header to justify image and subtitle to the right. Continued finetuning my lists under the images to avoid overlap when small (solved by including a media query). Organized files into an Assets folder before CSS and Images. Put in a placeholder project completed during bootcamp. Included links to a live project and open links to the others that will be filled in as I complete further projects.

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -131,10 +131,10 @@ header h1::after {
     background-color: var(--secondary);
 }
 
-/* .spotlight {
+.spotlight {
     margin: 1%;
     border: solid 3px var(--primary);
-} */
+}
 .project-1 {
     flex: 2 1 23%;
 }
@@ -146,14 +146,19 @@ header h1::after {
 .project-3 {
     flex: 2 3 23%;
 }
-.project-1, .project-2, .project-3,  {
+.project-1, .project-2, .project-3 {
     margin: 1%;
     border: 3px solid var(--primary);
 }
 
+.project-1 img, .project-2 img, .project-3 img, .spotlight img {
+    height: 100%;
+    width: 100%;
+}
 .spotlight ul {
     position: relative;;
     display: flex;
+    bottom: 7%;
  }
 
 .project-1 ul, .project-2 ul, .project-3 ul {
@@ -213,7 +218,7 @@ footer p {
 }
 
 @media screen and (max-width: 768px) {
-    .project-1 ul, .project-2 ul, .project-3 ul {
+    .spotlight ul, .project-1 ul, .project-2 ul, .project-3 ul {
         bottom: 15%;
     }
 }
